# progemi_ia

./: .gitignore
backend_progemi/: README  TODO  nb_connection_api.ipynb  nb_ocr_llm_azure_openai.ipynb  nb_ocr_llm_mistral.ipynb  nb_retry.ipynb  nb_test_azure.ipynb  nb_vision_mistral.ipynb  nb_vision_openai.ipynb  pyproject.toml
backend_progemi/app/: __init__.py  app.py  openapi.json
backend_progemi/app/agent/: agent.py
backend_progemi/app/auth/: auth.py  schemas.py
backend_progemi/app/cost/: cost.py  schemas.py
backend_progemi/app/ocr/: azure_di_handler.py  exceptions.py  schemas.py  utils.py
backend_progemi/app/performances/: time_counter.py
backend_progemi/app/progemi_api/: exception.py  progemi_api_handler.py  schemas.py
backend_progemi/app/proposal_object/: exceptions.py  path.py  proposal_evaluate_result.py  proposal_handler.py  proposal_lines.py  proposal_object_analyzer.py  proposal_object_creator.py  proposal_object_to_pdf.py  proposal_object_to_text.py  proposal_polygone.py  proposal_retry.py  proposal_section_analysis.py  proposal_text_analysis.py  proposal_validate_results.py  schemas.py
backend_progemi/app/user/: exception.py  router.py  schemas.py  user_handler.py
backend_progemi/app/utils/: utils.py
backend_progemi/config/: app.ini  config.py  logger_config.py
backend_progemi/data/bibliothèque_ouvrage/: juillard_bibliotheque_ouvrages.xlsx
backend_progemi/data/proposal_eval/: Devis - CHAINE CHAINE DES ARTISANS COTE SUD - DEVIS LARTIZIEN   1.txt  (+4 more)
backend_progemi/scripts/: clear_mongo_db.sh  run.sh  run_mongo_db_mac_os.sh
(+127 files in other folders)
